k8s-on-premise-cloud/manifest/movie-web-backend-user-service/user-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service-deployment
  namespace: movie-web
  labels:
    app: user-service
spec:
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: user-service
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - name: movie-web-backend-user-service
          image: registry.nhatanhmovieweb.website/onlineshop/movie-web-backend-user-service:v25_bfe2a19e
          ports:
            - containerPort: 3001
              protocol: TCP  
              name: tcp
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "1024Mi"
              cpu: "1000m"
              ephemeral-storage: "2Gi"
          volumeMounts:
            - name: user-service-configmap
              mountPath: /home/node/app/.env
              subPath: .env
      imagePullSecrets:
        - name: auth-registry
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      volumes:
        - name: user-service-configmap
          configMap:
            defaultMode: 420
            name: user-service-configmap
