k8s-on-premise-cloud/manifest/movie-web-backend-user-service/user-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: movie-web-backend-user-service
  namespace: movie-web
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  selector:
    app: user-service
  ports:
    - port: 3001
      targetPort: 3001
      protocol: TCP
      name: tcp
  type: ClusterIP
